...
    func showNextQuestionOrResults() -> Void {
        if self.isLastQuestion() {
            let text = correctAnswers == self.questionsAmount ?
                        "Ваш результат 10/10" :
                        "Ваш результат: \(correctAnswers)/10"
            let viewModel = QuizResultViewModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть ещё раз")
                viewController?.show(quiz: viewModel)
        } else {
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion()
...
